--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "postinstall": "npm rebuild node-sass",
     "start": "nodemon app.js",
     "test": "nyc mocha --timeout=3000 --exit",
-    "lint": "eslint **/*.js"
+    "lint": "eslint --fix **/*.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.0",
@@ -71,8 +71,12 @@
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-config-standard": "^11.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
     "nyc": "^13.0.0",
