--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bladeshield-dashboard",
-  "version": "1.0.0.alpha1",
+  "version": "1.0.0",
   "description": "A dashboard for bladeshield error tracker",
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
     "lint": "eslint --fix **/*.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.1.0",
+    "@fortawesome/fontawesome-free": "^5.2.0",
     "@ladjs/bootstrap-social": "^7.0.2",
     "@octokit/rest": "^15.9.2",
     "bcrypt-nodejs": "^0.0.3",
