--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "npm rebuild node-sass",
-    "start": "nodemon app.js",
+    "start": "nodemon --delay 1500ms app.js",
     "test": "nyc mocha --timeout=3000 --exit",
     "lint": "eslint --fix **/*.js"
   },
@@ -29,6 +29,7 @@
     "dotenv": "^6.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
+    "express-async-wrap": "^1.0.0",
     "express-flash": "^0.0.2",
     "express-session": "^1.15.6",
     "express-status-monitor": "^1.1.2",
@@ -39,6 +40,7 @@
     "lastfm": "^0.9.2",
     "lob": "^6.0.0",
     "lusca": "^1.6.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.2.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
