--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "npm rebuild node-sass",
-    "start": "nodemon --delay 1500ms app.js",
+    "start": "nodemon --delay 500ms app.js",
     "test": "nyc mocha --timeout=3000 --exit",
     "lint": "eslint --fix **/*.js"
   },
@@ -67,6 +67,7 @@
     "tumblr.js": "^2.0.0",
     "twilio": "^3.17.5",
     "twit": "^2.2.11",
+    "ua-parser-js": "^0.7.18",
     "validator": "^10.4.0"
   },
   "devDependencies": {
